@@ -1,5 +1,6 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Fix forwarding to Catalyst::Action objects (Rafael Kitover).
         - Fix links to the mailing lists (Florian Ragwitz).
         - Use Class::MOP instead of Class::Inspector (Florian Ragwitz).
         - Change Catalyst::Test to use Sub::Exporter (Florian Ragwitz).
